# Programacion_Paralela_Unidad_1_Parte_1

./: CMakeLists.txt  Notas.txt  fractal_serial.cpp  fractal_serial.h  fractal_simd.cpp  fractal_simd.h  fuentes_colores.txt  fuentes_de_internet.txt  main.cpp  palette.cpp  palette.h
